--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -158,7 +158,7 @@
 		Decanato de Estudios Profesionales \\
 		Coordinación de Ingeniería de la Computación
 		\vfill
-		\LARGE Reducciones automáticas de problemas de decisión en problemas de
+		\LARGE Reducciones automáticas de problemas de decisión a problemas de
         planificación \vfill}
 	\author{Por: \\
 		Aldo Fabrizio Porco Rametta \\
@@ -233,7 +233,7 @@ basado en la lógica de segundo orden y de una serie de procedimientos que
 recorren el árbol sintáctico para generar una serie de condiciones y operadores
 de un problema de planificación STRIPS, expresado en lenguaje PDDL.
 
-Se modelaron y solucionaron problemas de distintos dominios y tamaños a modo de
+Se modelaron y solucionaron problemas de varios dominios y tamaños a modo de
 probar la efectividad de un planificador basado en SAT para resolver los
 problemas traducidos. Los resultados fueron satisfactorios para problemas de
 tamaño moderado: el planificador logró resolver la mayoría de ellos en menos de
@@ -299,7 +299,6 @@ Complejidad, Lógica, Ingeniería del Conocimiento, Inteligencia Artificial.
 \textbf{kCol} & $k$-\textbf{Col}orabilidad\\
 \textbf{LPO} & \textbf{L}ógica de \textbf{P}rimer \textbf{O}rden\\
 \textbf{LSO} & \textbf{L}ógica de \textbf{S}egundo \textbf{O}rden\\
-\textbf{LSO} & \textbf{T}eoría de \textbf{C}omplejidad \textbf{D}escriptiva\\
 \textbf{NP} & \textbf{N}ondeterministic \textbf{P}olynomial time (clase de complejidad)\\
 \textbf{PDDL} & \textbf{P}lanning \textbf{D}omain \textbf{D}efinition \textbf{L}anguage \\
 \textbf{PH} & \textbf{P}olynomial \textbf{H}ierarchy (clase de complejidad)\\
