--- a/report/capitulos/capitulo2.tex
+++ b/report/capitulos/capitulo2.tex
@@ -542,8 +542,8 @@ $\textsc{init}(f_{\sigma,\Phi}(\A))$. Sea $u_j = a_j^\A$ para $1 \leq j \leq k$.
 \end{proof}
 
 \subsection{Tiempo de corrida de la reducción}
-En esta sección se demuestra que $f_{\sigma,\Phi}$ es una reducción en tiempo
-polinomial del problema NP expresado por $\Phi$ en STRIPS.
+En esta sección se demuestra que $f_{\sigma,\Phi}$ es una reducción
+del problema NP expresado por $\Phi$ a STRIPS que corre en tiempo polinomial.
 
 Recuerde que 
 $ f_{\sigma,\Phi}(\A) = \ground(\domred(\sigma,\Phi),\insred(\sigma,\Phi,\A))
