--- a/report/capitulos/capitulo1.tex
+++ b/report/capitulos/capitulo1.tex
@@ -226,7 +226,8 @@ que $f$ es una función.
 Por esta razón se omiten los símbolos funcionales en lo sucesivo.
 
 \subsubsection{Lógica de segundo orden}
-Se denota con $\LPO(\sigma)$ y $\LSO(\sigma)$ a los conjuntos de todas las
+Se denota con $\LPO(\sigma)$ (lógica de primer orden) y $\LSO(\sigma)$ (lógica
+de segundo orden) a los conjuntos de todas las
 fórmulas de lógica de primer y segundo orden basadas en la firma $\sigma$.
 La única diferencia entre la LPO y la LSO es que en esta última se permite la
 cuantificación sobre los símbolos relacionales. La fórmulas que forman parte
