--- a/report/capitulos/capitulo3.tex
+++ b/report/capitulos/capitulo3.tex
@@ -335,7 +335,8 @@ $\Phi=(\exists T^{t_1})(\forall R^{t_2})\psi$ puede ser analizada como
 \end{equation}
 de modo que las acciones de cuantificadores existenciales (parecidas a las de
 SAT) puedan ser combinadas acciones de cuantificadores universales (parecidas a
-las de UNSAT). Para realizar la combinación, el operador E5 del existencial de
+las de UNSAT). Para realizar la combinación, el operador E5 (ver Figura
+\ref{fig:sat}) del existencial de
 segundo orden interno debe borrar las condiciones de todas las subfórmulas para
 tener un ``estado limpio'' para la siguiente prueba.
 %having fluents for the SO formula $\Phi_\SAT$ and by ``passing control''
