--- a/report/capitulos/conclusiones.tex
+++ b/report/capitulos/conclusiones.tex
@@ -49,8 +49,9 @@ que es posible, pero no se recomienda el uso de la herramienta para ello ya que
 el ejercicio puede tomar mucho tiempo.
 
 Además, la herramienta es de interés para los investigadores del área de
-planificación automática, pues los problemas de planificación que genera
-presentan un reto para los planificadores actuales y pueden utilizarse como una
+planificación automática, pues se conocen ciertas propiedades acerca de los problemas 
+de planificación que genera, incluyendo los horizontes de búsqueda en los que
+se encuentra una solución si ésta existe. Los problemas pueden utilizarse como una
 medida de comparación entre diferentes enfoques de cómo construir planificadores
 generales y eficientes, particularmente en el caso de \textit{SAT-planners} y
 en la búsqueda de planes paralelos.
@@ -75,6 +76,6 @@ extensión, el poder expresivo del lenguaje presentado aquí se equipararía a
 PDDL.
 \item Optimizar las reducciones para distintos tipos de planificadores, ya que
 el trabajo se concentró en planfificadores basados en SAT. Como punto de
-partida, puede investigarse a fondo por qué el planificador LAMA '11 tuvo
+partida podría investigarse a fondo por qué el planificador LAMA '11 tuvo
 mejores resultados que M en el dominio \coCOL.
 \end{enumerate}
